<resources>
    <string name="app_name">Just Java</string>
    <string name="quantity">QUANTITY</string>
    <string name="toppings">TOPPINGS</string>
    <string name="_0">0</string>
    <string name="order">Order</string>
    <string name="order_summary">ORDER SUMMARY</string>
    <string name="first_price">$0</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="whipped_cream">Whipped cream</string>
    <string name="chocolate">Chocolate</string>
    <string name="name">Name</string>
</resources>